--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,5 @@
-.App {
+.container {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,15 +10,24 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.click-button {
+  background-color: #f9877f;
+  width: 500px;
+  height: 200px;
+  font-size: 50px;
+  color: white;
+  border-radius: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.start-button {
+  background-color: #f9877f;
+  width: 300px;
+  height: 100px;
+  font-size: 50px;
+  color: white;
+  border-radius: 30px;
+}
+
+.text {
+  font-size: 50px;
 }
