--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@
   border-radius: 30px;
 }
 
+.reset-button {
+  background-color: #c808f9;
+  width: 100px;
+  height: 50px;
+  font-size: 20px;
+  color: white;
+  border-radius: 30px;
+}
+
 .text {
   font-size: 50px;
 }
